# phonemes-recognition-app

./: Makefile  README.md  openapi.json
backend/: CLAUDE.md  main.py  pyproject.toml
backend/app/api/v1/: dictionary.py  evaluation.py  word_lists.py
backend/app/core/: config.py  database.py
backend/app/ml/: audio_converter.py  error_map.py  phoneme_model.py
backend/app/models/: word.py  word_list.py
backend/app/schemas/: evaluation.py  word.py  word_list.py
backend/app/services/: dictionary_service.py  evaluation_service.py  word_list_service.py
backend/data/: words.json
backend/scripts/: seed_db.py
backend/tests/: conftest.py  test_dictionary_router.py  test_dictionary_service.py  test_evaluation_router.py  test_evaluation_service.py  test_models.py  test_schemas.py  test_word_list_models.py  test_word_list_router.py  test_word_list_schemas.py  test_word_list_service.py
docker/: Dockerfile  start.sh
docs/: feat-dictionary.md  feat-evaluation.md  feat-word-list.md  spec.md
frontend/: CLAUDE.md  index.html  package.json
frontend/src/: App.tsx
frontend/src/components/features/AudioRecorder/: AudioRecorder.tsx
frontend/src/components/features/CorrectionHint/: CorrectionHint.tsx
frontend/src/components/features/PhoneticBreakdown/: PhoneticBreakdown.tsx
frontend/src/components/features/WordCard/: WordCard.tsx
frontend/src/hooks/: useMediaRecorder.ts
frontend/src/pages/: SessionPage.tsx  WordListsPage.tsx
frontend/src/services/: api.ts  evaluationApi.ts  wordApi.ts
frontend/src/stores/: sessionStore.ts
frontend/src/types/: index.ts
